Bug 1534467 - Fix layout debugger build in non-DEBUG builds. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D23397

--HG--
extra : moz-landing-system : lando